Fix navbar behind some elements

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -56,7 +56,6 @@
     transition: all 0.5s ease;
     padding: 0;
     margin: 0;
-    z-index: 99999;
 }
 
 
